Fix nav icons being wrong size

--- a/components/nav/nav.module.scss
+++ b/components/nav/nav.module.scss
@@ -12,6 +12,7 @@
 		.navicon {
 			margin-left: 1rem;
 			margin-right: 1rem;
+            width: 17px;
 		}
 	}
 
@@ -60,6 +61,7 @@
 .navicon {
 	margin-right: auto;
 	margin-left: 1rem;
+    width: 17px;
 }
 
 .navitem:hover {
